Implementation of Figures 1, 2, 3

--- a/README.org
+++ b/README.org
@@ -8,3 +8,16 @@ Codes in this repository require Python 3.7. The repository relies on
 $ pipenv --python 3.7
 $ pipenv install
 #+end_src
+
+* Programs
+- Fig. 1          :: Install MariaDB and Galera Globally
+     : pipenv run python fig1.py
+- Fig. 2          :: Analyze Galera Protocol. Requires ~tcpdump~ and
+     should be run as ~sudo~
+     : pipenv run python fig2.py
+- Fig. 3          :: Install MariaDB and Galera on ~database~ Hosts,
+     and Sysbench on ~client~ Hosts.
+     : pipenv run python fig3.py
+- Fig. 4 :: Reusable Monitoring function.
+- Fig. 5a :: Get resources on Vagrant
+- Fig. 5b :: Get resources on Grid'5000
